Changes in version 1.3.0

UPDATE: added integration of SemNetCleaner output into `SemNeTShiny`

MOVE: `equate` and `finalize` moved from SemNetCleaner to SemNeT

REMOVE: foreach and doParallel dependencies were removed (all parallelization is through the pbapply package)

REMOVE: SemNetCleaner dependency was removed to allow SemNeT to operate independently -- all necessary functions from SemNetCleaner have been moved to internal functions

UPDATE: `compare.nets` has changed to `compare_nets`

ADD: Several semantic network estimation methods (see `CN`, `NRW`, and `PF`) -- these are included in the Shiny app

CHANGE: `partboot` is now `bootSemNeT`

CHANGE: `plot.partboot` is now `plot.bootSemNeT`

CHANGE: `partboot.test` is now `test.bootSemNeT`

UPDATE: `cosine` was added to internal functions to remove archived package from dependencies


Changes in version 1.2.0

o ADD: Shiny app

o FIX: 'groups' argument in `org.plot`

o UPDATE: moved several functions to internal to clean up package

o ADD: binary responses matrices from animals verbal fluency data associated with the 'SemNetCleaner' package (open.animals)


Changes in version 1.1.3

o added extended ANOVA capabilities to `partboot.test` (e.g., two-way ANOVA)


Changes in version 1.1.2

o fixed bug for weighted modularity in `semnetmeas`

o updated citation (PsyArXiv)

o changed y-axis in plots for `partboot` to read as integers (as added black dot for mean in the scatterplots under the raincloud)

o added vignette for analyzing semantic networks

o added data for plots in vignette


Changes in version 1.1.1

o updated citation


Changes in version 1.1.0

o changed `semnetmeas` to allow calculation of any combination of measures

o `partboot`, `partboot.test`, `plot.partboot`, `randnet.test`, and `compare.nets` now handle groups greater than 2

o bug fixes


Changes in version 1.0.0

o serious, and I mean serious, revamp of functions (all for the better)
